--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="error_invalid_input">Please enter valid numbers</string>
     <string name="error_empty_input">Please enter both numbers</string>
     <string name="sum_result">Sum: </string>
+    <string name="result_will_be_shown_here">Result will be shown here</string>
 </resources>
